<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video_view_display"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:id="@+id/play_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_play_circle_outline_white_48dp"
                android:contentDescription="@string/play_button" />


        </RelativeLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/ic_file_video_grey600_24dp"
            android:text="@string/save_btn" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_delete_grey600_24dp"
            android:text="@string/delete_btn" />


    </LinearLayout>

</layout>
